fix profiletabs sizing to notwrap

--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -274,3 +274,7 @@ hr {
         padding: 0 !important;
     }
 }
+
+.g1ProfileTabs .nav-link {
+    padding: .3rem .6rem;
+}
